--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- html boiler plate refers to sections of code that have to be included in many places with little or no alterationboilerplate code or boilerplate refers to sections of code that have to be included in many places with little or no alteration-->
+<!-- https://gradez.github.io/cv/ -->
 <html lang="en" dir="ltr">
 
 <head>
@@ -15,7 +15,7 @@
       <td><h1>Grady Xie</h1>                                      <!-- 'h1' Header 1 tag. The number signifies the font size -->
       <p>                                                     <!-- 'p' Start Paragraph tag. this requires a closing tag -->
         A little bit about me
-        <br><em>i like to <strong>code stuff</strong></em>    <!-- the 'br' tag is a line break. self-closing -->
+        <br><em>i like to <strong>code for fun</strong></em>    <!-- the 'br' tag is a line break. self-closing -->
         <br><em>i also drink coffee</em>             <!-- 'em' emphasis tag that italicizes. 'strong' is to bold -->
         <br>i probably shouldn't be drinking that much <em><strong>coffee</strong></em>
       </p>
@@ -61,9 +61,6 @@
         <td>Server at Gyu-Kaku Japanese Restaurant</td>
       </tr>
     </tbody>
-    <tfoot>
-      <tf>testing</tf>
-    </tfoot>
   </table>
 
   <hr size="3">
